jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service  
spec:
  selector: 
    app: jenkins-server
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 9090
